--- a/home.html
+++ b/home.html
@@ -4,27 +4,32 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="css/home.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
 </head>
 <body>
     <h1>ASCII-ART-WEB</h1>
 
-    <form action="/ascii-art" method="post">
-        <textarea name="data" id="textarea" maxlength="200" cols="40" rows="10" required></textarea>
+    <form action="/process" method="post">
+        <textarea name="data" id="textarea" cols="20" rows="10" maxlength="100" required></textarea>
         <div class="checkbox">
-            <input type="radio" name="banner" id="" value="standard" checked>standard
-            <input type="radio" name="banner" id="" value="shadow">shadow
-            <input type="radio" name="banner" id="" value="thinkertoy">thinkertoy
+            <label>Choices:</label>
+            <div class="input"><input type="radio" name="banner" value="standard" checked>standard</div>
+            <div class="input"><input type="radio" name="banner" value="shadow">shadow</div>
+            <div class="input"><input type="radio" name="banner" value="thinkertoy">thinkertoy</div>
         </div>
         <div class="btn">
-            <button type="submit" style="padding: 10px; background: blue; color: white; font-size: 20px; 
-            border: none; border-radius: 5px; cursor: pointer; margin-top: 10px;">Click to download the file</button>
+            <button type="submit" class="btns">Submit</button>
         </div>
     </form>
-    {{if .Res }}
-    <h2 class="a">Result:</h2>
-    <div class="result">
-        <pre>{{.Res}}</pre>
-    </div>
-{{end}}
+
+    {{if .Res}}
+        <h2 class="res">Result:</h2>
+        <div class="result">
+            <a href="/export"><i class="fa-solid fa-download"></i></a>
+            <pre>{{.Res}}</pre>
+        </div>
+    {{end}}
+
 </body>
 </html>
